Minor changes to DB and FV Health EP
- Added start and endtime for training
- GET healthdata -> Added exercise query param
