# Fitervari_Backend/FitervariBackend/src/main/java/com/fitervari/model/FitervariHealth/HealthData.java
@@ -15,7 +15,7 @@ import java.time.LocalDateTime;
 @NoArgsConstructor
 @NamedQueries({
         @NamedQuery(name = HealthData.GETALLWITHCRITERIA,
-                query = "SELECT h FROM healthdata h WHERE (:exerciseSetId=-1L or h.exerciseSet=:exerciseSetId) and (:trainingsId=-1L or h.training.id=:trainingsId) and (:type=-1L or h.healthDataType.id=:type)")
+                query = "SELECT h FROM healthdata h WHERE (:exerciseSetId=-1L or h.exerciseSet=:exerciseSetId) and (:trainingsId=-1L or h.training.id=:trainingsId) and (:exerciseId=-1L or h.exerciseSet.exercise.id=:exerciseId) and (:type=-1L or h.healthDataType.id=:type)")
 })
 public class HealthData {
 
